--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="Album-desc">
             <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Albums</h1>
             <div id="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <input type="text"><button class="fa-solid fa-magnifying-glass"></button>
+                <input placeholder="Search" type="text"><button class="fa-solid fa-magnifying-glass"></button>
             </div>
         </div>
         <div class="Album_Align">
@@ -306,7 +306,7 @@
         <div class="Magazine-desc">
             <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Magazine</h1>
             <div id="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <input type="text"><button class="fa-solid fa-magnifying-glass"></button>
+                <input placeholder="Search" type="text"><button class="fa-solid fa-magnifying-glass"></button>
             </div>
         </div>
         <div class="magazine-align">
@@ -378,7 +378,7 @@
         <div class="Movie_desc">
             <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Movies</h1>
             <div id="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <input type="text"><button class="fa-solid fa-magnifying-glass"></button>
+                <input placeholder="Search" type="text"><button class="fa-solid fa-magnifying-glass"></button>
             </div>
         </div>
         <div class="Movie_align">
@@ -604,7 +604,7 @@
 
     <div id="Membership">
         <div id="sub-line">
-        <h1 class="subscription-heading" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Subscription</h1>
+        <h1 class="subscription-heading" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Membership</h1>
         </div>
         <div class="subscription-main">
             <div class="subscription-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
@@ -757,21 +757,21 @@
             <div class="f-address">
                 <h3 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">Have a Question?</h3>
                 <address>
-                    <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000">
+                    <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
                         <p>
                             <span><ion-icon name="location-outline"></ion-icon></span>
                             Sindh,karachi
                         </p>
                     </div>
 
-                    <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1200">
+                    <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1200">
                         <p>
                             <span><ion-icon name="location-outline"></ion-icon></span>
                             <a href="">+92 3112005919</a>
                         </p>
                     </div>
 
-                    <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1400">
+                    <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1400">
                         <p>
                             <span><ion-icon name="location-outline"></ion-icon></span>
                             <a href="">info@gmail.com</a>
