--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
         <div class="Album-desc">
             <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Albums</h1>
-            <div id="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <input placeholder="Search" type="text"><button class="fa-solid fa-magnifying-glass"></button>
+            <div class="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                <input placeholder="Search" type="text">
+                <!-- <button class="fa-solid fa-magnifying-glass"></button> -->
             </div>
         </div>
         <div id="line"></div>
@@ -307,8 +308,9 @@
     <section id="Magazines">
         <div class="Magazine-desc">
             <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Magazine</h1>
-            <div id="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <input placeholder="Search" type="text"><button class="fa-solid fa-magnifying-glass"></button>
+            <div class="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                <input placeholder="Search" type="text">
+                <!-- <button class="fa-solid fa-magnifying-glass"></button> -->
             </div>
         </div>
         <div id="line"></div>
@@ -481,8 +483,9 @@
     <section id="Movies">
         <div class="Movie_desc">
             <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Movies</h1>
-            <div id="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <input placeholder="Search" type="text"><button class="fa-solid fa-magnifying-glass"></button>
+            <div class="search" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                <input placeholder="Search" type="text">
+                <!-- <button class="fa-solid fa-magnifying-glass"></button> -->
             </div>
         </div>
         <div id="line"></div>
